2009-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Exit gracefully if suntar exit with != 0
	                               Parse hard link in index.
	* server-src/amstatus.pl: Fix amstatus for partial chunker.
	* installcheck/amstatus.pl: Test it.
	* installcheck/Installcheck/Run.pm: export an $exit_code variable.

2009-04-10  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: fix handling of double-backslash in quoted
	  strings

2009-04-09  Ray Tracer <RayTracer@irc.freenode.net>
	* application-src/amgtar.c: add missing 'break'

2009-04-09  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/conffile.c: store properties in lower-case
	* perl/Amanda/Config.swg: document data formats for config values
	* installcheck/Amanda_Config.pl: test case-sensitivity

2009-04-09  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/rait-device.c: add rait_device_new_from_children
	* device-src/device.h: prototype
	* perl/Amanda/Device.swg: wrap into perl
	* installcheck/Amanda_Device.pl: test

2009-04-08  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tape-device.c: fix typo to get device_name right

2009-04-08  Nikolas Coukouma <atrus@zmanda.com>, Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: clarify meaning of s3_bucket location

2009-04-08  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: fix early return if PROGRAM not given
	* perl/Amanda/Disklist.swg: do not free the C disklist
	* perl/Makefile.am perl/Amanda/Holding.pm: new pure-perl package with
	  functionality similar to server-src/holding.[ch]
	* server-src/holding.h: clarify comments
	* installcheck/Amanda_Holding.pl installcheck/Installcheck/Config.pm
	  installcheck/Makefile.am: tests

2009-04-08  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/xfer-dest-taper.c: fix uninitialized-value warnings

2009-04-07  Dustin J. Mitchell <dustin@zmanda.com>